--- a/pki-java/src/Config/config
+++ b/pki-java/src/Config/config
@@ -8,3 +8,9 @@ USERS_BASE_DN=ou=intermediatePeopleCA,ou=rootCA,dc=pkirepository,dc=org
 
 #ALIAS Keystore
 ALIAS=aliaskey1
+
+#Config 
+
+PASSWORD_CA_ROOT=passwordRootCA
+PASSWORD_CA_INTP=passwordPeopleCA
+PASSWORD8CA_INTS=passwordServerCA
