--- a/pki-java/src/Config/config
+++ b/pki-java/src/Config/config
@@ -6,9 +6,12 @@ LDAP_ADMIN_DN=cn=admin,dc=pkirepository,dc=org
 LDAP_PASS=PKICrypto
 USERS_BASE_DN=ou=intermediatePeopleCA,ou=rootCA,dc=pkirepository,dc=org
 
-#ALIAS Keystore
-ALIAS=personne1_certificat
-
+#Client Config
+CLIENT_CERT_ALIAS=personne1_certificat
+CLIENT_KEY_ALIAS=personne1_private
+CLIENT_KEY_PASS=monpassP1
+USER_KEYSTORE_PATH=src/Playground/test_keystore.ks
+USER_KEYSTORE_PASS=passwd
 #Config RA
 IP_RA=localhost
 
