Update de la config, pour ajouter les ports d'écoute par défaut.

--- a/pki-java/src/Config/config
+++ b/pki-java/src/Config/config
@@ -21,3 +21,9 @@ PASSWORD_CA_ROOT=passwordRootCA
 PASSWORD_CA_INTP=passwordPeopleCA
 PASSWORD_CA_INTS=passwordServerCA
 PASSWORD_CA_SIG=passwordSigningCert
+
+#Services
+PORT_USER=7000
+PORT_CA=7001
+PORT_RA=7002
+PORT_REPOSITORY=7003
