--- a/pki-java/config
+++ b/pki-java/config
@@ -1,14 +1,20 @@
 
 #LDAP Configuration
-LDAP_IP=87.98.166.65
+LDAP_IP=localhost
+#LDAP_IP=87.98.166.65
 LDAP_PORT=389
 LDAP_ROOT_DN=dc=pkirepository,dc=org
 LDAP_ADMIN_DN=cn=admin,dc=pkirepository,dc=org
 USERS_BASE_DN=ou=intermediatePeopleCA,ou=rootCA,dc=pkirepository,dc=org
 
 #Client Config
-CLIENT_CERT_ALIAS=robin1_certificat
-CLIENT_KEY_ALIAS=robin1_private
+
+CLIENT_CERT_ALIAS=bob_certificat
+CLIENT_KEY_ALIAS=bob_private
+
+#CLIENT_CERT_ALIAS=alice_certificat
+#CLIENT_KEY_ALIAS=alice_private
+
 CLIENT_KEY_PASS=monpassP1
 KS_PATH_USER=keystores/user_keystore.ks
 KS_PASS_USER=passwd
